--- a/style.css
+++ b/style.css
@@ -11,7 +11,7 @@ body {
 }
 .container{
     width: 100%;
-    height: 100vh;
+    min-height: 100vh;
     background-color: #f3f5f8;
 
 }
@@ -19,7 +19,7 @@ nav{
     display: flex;
     width: 100%;
     justify-content: space-around;
-    height: 100vh;
+    height: 80px;
     line-height: 80px;
     z-index: 111;
     
@@ -308,9 +308,4 @@ h3{
     padding: 100px;
     justify-content: center;
 
-}
-@media screen and (min-width: 768px) {
-    .container {
-        width: 100;
-    }
 }
