--- a/style.css
+++ b/style.css
@@ -25,6 +25,18 @@ nav{
     
 
 }
+.logo img {
+    height: 100%;
+    object-fit: contain;
+    
+    
+    transition: transform 0.3s ease-in-out, border-color 0.3s ease-in-out;
+}
+
+.logo img:hover {
+    transform: scale(1.5) rotate(360deg); /* Add a scaling and rotation effect on hover */
+    border-color: #ff007f;
+}
 .logo{
     display: flex;
     font-size: 40px;
@@ -149,8 +161,8 @@ button{
     cursor: pointer;
     font-size: 25px;
     font-weight: 400;
-    color: #e71414;
-    background-color: #3d535f;
+    color: white;
+    background-color: #0e91d8;
     padding: 8px 14px;
     margin: 40px 5px;
     letter-spacing: 2px;
@@ -227,12 +239,18 @@ button:hover{
 .rdm{
     left: 10px;
 }
+.about-img {
+    float: right;
+    margin-left: 20px; /* Adjust the margin as needed */
+}
+
 
 .about-img img{
+    
     width: 30vw;
     transform: scaleX(-1);
     max-width: 300px;
-    
+    float: right;
 }
 
 .about-content{
@@ -242,7 +260,7 @@ button:hover{
 
 /*-------skill-------*/
 
-.skill{
+/* .skill{
     
   
     margin-top:700px;
@@ -279,7 +297,63 @@ h3{
     box-shadow: 0 0 20px 0px rgba(0, 0, 0, 0.363);
     cursor: pointer;
 
+} */
+
+.skill {
+    background-color: #f4dcdc;
+    padding: 50px 0;
+    border-radius: 30%;
 }
+
+
+.title {
+    text-align: center;
+    margin-bottom: 50px;
+}
+
+.row {
+    display: flex;
+    justify-content: space-between;
+}
+
+.course-col {
+    flex-basis: 30%;
+    background-color: rgb(143, 209, 147);
+    padding: 30px;
+    box-shadow: 0 4px 8px 0 white;
+    border-radius: 10%;
+}
+
+.course-col h3 {
+    margin-bottom: 20px;
+    color: white;
+}
+
+.skill-list {
+    display: flex;
+    flex-wrap: wrap;
+    margin-bottom: 20px;
+}
+
+.skill-list span {
+    margin-right: 10px;
+    margin-bottom: 10px;
+    padding: 5px;
+    border-radius: 5px;
+    background-color: #fcd7ff;
+}
+a.skill {
+    background-color: #f5f5f5;
+    padding: 50px 0;
+    animation: flash 1s infinite;
+  }
+  
+  /* Add keyframes for the animation */
+  @keyframes flash {
+    0% { background-color: #e4fe7d; }
+    50% { background-color: #ffffcc; }
+    100% { background-color: #fa3f3f; }
+  }
 .comment-box{
     border: 1px solid #ccc;
     margin: 50px 0;
@@ -308,4 +382,22 @@ h3{
     padding: 100px;
     justify-content: center;
 
+}
+.backToTopBtn {
+    position: fixed;
+    bottom: 20px;
+    
+    left: 50%;
+    transform: translateX(-50%);
+    display: none;
+    background-color: #7f00ff;
+    color: #fff;
+    border: none;
+    border-radius: 5px;
+    padding: 10px 20px;
+    cursor: pointer;
+}
+
+.backToTopBtn:hover {
+    background-color: #5e008c;
 }
