--- a/style.css
+++ b/style.css
@@ -41,6 +41,12 @@
     cursor: pointer;
     text-transform: uppercase;
   }
+
+@media screen and (max-width: 768px) {
+    .logo {
+        font-size: 16px;
+    }
+}
   b {
     font-size: 70px;
     color: #7f00ff;
